--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,12 +6,29 @@ on:
             - main
     workflow_dispatch:
 jobs:
-    build:
+    docker-build-push:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
 
-            - name: Build Docker image
-              run: docker build -t spring-boot-app:latest .
+            - name: configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v1
+              with:
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: ${{ secrets.AWS_REGION }}
+
+            - name: Log in to Amazon ECR
+              uses: aws-actions/amazon-ecr-login@v1
+
               
+            - name: Build docker image
+              run: |
+                  docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
+                  docker tag ${{ secrets.ECR_REPOSITORY }}:latest 
+
+            - name: Push docker image to ECR
+              run: |
+                  docker push ${{ secrets.ECR_REPOSITORY }}:latest
+                  
