--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,10 +25,9 @@ jobs:
               
             - name: Build docker image
               run: |
-                  docker build -t ${{ secrets.ECR_REPOSITORY }}:latest .
-                  docker tag ${{ secrets.ECR_REPOSITORY }}:latest 
+                  docker build -t ${{ secrets.ECR_REPO }}:latest .
+                  docker tag ${{ secrets.ECR_REPO }}:latest ${{ secrets.ECR_REPO }}:latest
 
             - name: Push docker image to ECR
               run: |
-                  docker push ${{ secrets.ECR_REPOSITORY }}:latest
-                  
+                  docker push ${{ secrets.ECR_REPO }}:latest
